--- a/src/css/main.css
+++ b/src/css/main.css
@@ -20,6 +20,7 @@
 @import "./footer-case.css";
 @import "./footer-features.css";
 @import "./video.css";
+@import "./plyr.css";
 
 @theme {
     --font-sans: 'Craftwork Sans', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
