--- a/src/templates/includes/head.jade
+++ b/src/templates/includes/head.jade
@@ -17,6 +17,7 @@ head
         //link(rel='stylesheet', href='assets/vendor/odometer/themes/odometer-theme-minimal.css')
         link(rel='stylesheet', href='assets/vendor/jquery.scrollbar/jquery.scrollbar.css')
         link(rel='stylesheet', href='assets/vendor/swiper/dist/css/swiper.min.css')
+        link(rel='stylesheet', href='assets/vendor/plyr/dist/plyr.css')
         link(rel='stylesheet', href='assets/css/common.min.css')
         link(rel='stylesheet', href='assets/css/main.min.css')
 
@@ -32,5 +33,6 @@ head
         //script(src='assets/vendor/fancybox/source/helpers/jquery.fancybox-thumbs.js')
         script(src='assets/vendor/jquery.scrollbar/jquery.scrollbar.min.js')
         script(src='assets/vendor/swiper/dist/js/swiper.min.js')
+        script(src='assets/vendor/plyr/dist/plyr.js')
         //script(src='assets/js/emerge.js')
         script(src='assets/js/script.js')
