refactored modal video. moved urls to html. done plyr.

--- a/src/css/plyr.css
+++ b/src/css/plyr.css
@@ -70,6 +70,12 @@
     }
 }
 
+[data-plyr="fullscreen"], [data-plyr="mute"] {
+    &:hover {
+        filter: drop-shadow(0 0 2px #fff);
+    }
+}
+
 .plyr__time {
     @apply cursor-default;
     min-width: 55px;
