--- a/src/css/video.css
+++ b/src/css/video.css
@@ -19,6 +19,7 @@
 
 .video-modal__dialog {
     width: min(calc(100vw - 80px), calc((100vh - 80px) * (16 / 9)));
+    will-change: transform;
 
     @apply transform scale-95;
     @apply transition-transform duration-300 ease-out;
