--- a/src/templates/includes/footer.html
+++ b/src/templates/includes/footer.html
@@ -1,7 +1,7 @@
-<section id="contacts-container" class="relative m-8 mb-12 mx-auto font-sans rounded-4xl overflow-hidden xl:w-[1164px] xl:h-[680px] 2xl:w-[1376px] 2xl:h-[780px] 3xl:w-[1540px] 3xl:h-[874px]">
+<section id="contacts-container" class="relative m-4 2xl:m-8 mb-0 xl:mb-5 2xl:mb-12 mx-auto font-sans rounded-4xl overflow-hidden w-[1000px] h-[676px] xl:w-[1164px] xl:h-[680px] 2xl:w-[1376px] 2xl:h-[780px] 3xl:w-[1540px] 3xl:h-[874px]">
     <!-- Contact switcher (абсолютное позиционирование) -->
     <div class="absolute top-3 right-3 z-10">
-        <div class="flex items-start justify-between p-3 2xl:p-4 2xl:pb-7 bg-white rounded-28 h-[98px] 2xl:h-[140px] w-[493px] 2xl:w-[578px]">
+        <div class="flex items-start justify-between p-0 xl:p-3 2xl:p-4 2xl:pb-7 xl:bg-white rounded-28 h-[88px] xl:h-[98px] 2xl:h-[140px] w-[488px] xl:w-[493px] 2xl:w-[578px]">
             <!-- Дима -->
             <div data-active="true" data-target="dima" class="group contact-switcher__item contact-switcher__item_dima">
                 <div class="contact-switch">
@@ -97,13 +97,13 @@
 
         <!-- Левая часть -->
         <div class="flex-1 p-7 flex flex-col justify-between z-1">
-            <div class="font-serif space-y-4 2xl:space-y-3 w-[420px] 2xl:w-[525px]">
+            <div class="font-serif space-y-4 2xl:space-y-3 w-[376px] xl:w-[420px] 2xl:w-[525px]">
                 <div class="contact-block__line1 text-white/60">Спасибо, что долистали до конца</div>
                 <div class="contact-block__line2 text-white">Самое время обсудить проект</div>
             </div>
 
             <div class="flex">
-                <div class="flex flex-col items-start gap-3 w-[273px]">
+                <div class=" flex flex-col items-start gap-3 w-[273px] max-xl:hidden">
                     <div class="chat-message chat-message-1 chat-message_default">Привет!</div>
                     <div class="chat-message chat-message-2 chat-message_default">Я Дима, фаундер<br>агентства TOLKUNOV</div>
                     <div class="chat-message chat-message-3 chat-message_cta">
@@ -117,9 +117,9 @@
                     </div>
                 </div>
                 <div class="flex flex-1 items-end justify-center pb-6">
-                    <a href="#" class="contact-block__play rotate-8 text-blue-600 hover:text-blue-620 hover:bg-blue-50 hover:after:bg-blue-50" data-modal="video" data-target="#modal-video-dima">
-                        <i class="icon icon-play-short size-6 2xl:size-7"></i>
-                        <span>42 сек</span>
+                    <a href="#" class="contact-block__play contact-block__play_lb xl:contact-block__play_lt rotate-2 xl:rotate-8 text-blue-600 hover:text-blue-620 hover:bg-blue-50 hover:after:bg-blue-50" data-modal="video" data-target="#modal-video-dima">
+                        <i class="icon icon-play-short size-5 xl:size-6 2xl:size-7"></i>
+                        <span>40 сек</span>
                     </a>
                 </div>
             </div>
@@ -285,13 +285,13 @@
         </picture>
         <!-- Левая часть -->
         <div class="flex-1 p-7 flex flex-col justify-between z-1">
-            <div class="font-serif space-y-4 2xl:space-y-3 w-[420px] 2xl:w-[525px]">
+            <div class="font-serif space-y-4 2xl:space-y-3 w-[330px] xl:w-[420px] 2xl:w-[525px]">
                 <div class="contact-block__line1 text-white/60">Спасибо, что долистали до конца</div>
                 <div class="contact-block__line2 text-white">Как насчёт кросс-промо?</div>
             </div>
 
             <div class="flex">
-                <div class="flex flex-col items-start gap-3 w-[273px]">
+                <div class=" flex flex-col items-start gap-3 w-[273px] max-xl:hidden">
                     <div class="chat-message chat-message-1 chat-message_default">Привет!</div>
                     <div class="chat-message chat-message-2 chat-message_default">Я Таня, отвечаю за пиар<br>в TOLKUNOV</div>
                     <div class="chat-message chat-message-3 chat-message_cta">
@@ -305,9 +305,9 @@
                     </div>
                 </div>
                 <div class="flex flex-1 items-end justify-center pb-6">
-                    <a href="#" class="contact-block__play rotate-8 text-purple-400 hover:text-purple-600 hover:bg-purple-50 hover:after:bg-purple-50" data-modal="video"
+                    <a href="#" class="contact-block__play contact-block__play_rt xl:contact-block__play_lt -rotate-3 xl:-rotate-8 text-purple-400 hover:text-purple-600 hover:bg-purple-50 hover:after:bg-purple-50" data-modal="video"
                        data-target="#modal-video-tanya">
-                        <i class="icon icon-play-short size-6 2xl:size-7"></i>
+                        <i class="icon icon-play-short size-5 xl:size-6 2xl:size-7"></i>
                         <span>25 сек</span>
                     </a>
                 </div>
@@ -429,13 +429,13 @@
         </picture>
         <!-- Левая часть -->
         <div class="flex-1 p-7 flex flex-col justify-between z-1">
-            <div class="font-serif space-y-4 2xl:space-y-3 w-[400px] 2xl:w-[466px]">
+            <div class="font-serif space-y-4 2xl:space-y-3 w-[370px] xl:w-[400px] 2xl:w-[466px]">
                 <div class="contact-block__line1 text-blue-900/60">Спасибо, что долистали до конца</div>
                 <div class="contact-block__line2 text-blue-900">В поиске крутых коллег?</div>
             </div>
 
             <div class="flex">
-                <div class="flex flex-col items-start gap-3 w-[273px]">
+                <div class=" flex flex-col items-start gap-3 w-[273px] max-xl:hidden">
                     <div class="chat-message chat-message-1 chat-message_default">Привет!</div>
                     <div class="chat-message chat-message-2 chat-message_default">Я Оля, отвечаю за кадры<br>в TOLKUNOV</div>
                     <div class="chat-message chat-message-3 chat-message_cta">
@@ -449,9 +449,9 @@
                     </div>
                 </div>
                 <div class="flex flex-1 items-end justify-center pb-6">
-                    <a href="#" class="contact-block__play rotate-8 text-lime-500 hover:text-lime-520 hover:bg-amber-50 hover:after:bg-amber-50" data-modal="video"
+                    <a href="#" class="contact-block__play contact-block__play_rb -rotate-3 xl:rotate-8 text-lime-500 hover:text-lime-520 hover:bg-amber-50 hover:after:bg-amber-50" data-modal="video"
                        data-target="#modal-video-olya">
-                        <i class="icon icon-play-short size-6 2xl:size-7"></i>
+                        <i class="icon icon-play-short size-5 xl:size-6 2xl:size-7"></i>
                         <span>20 сек</span>
                     </a>
                 </div>
@@ -573,14 +573,14 @@
     </div>
 </section>
 
-<footer class="footer py-12 font-sans w-[1160px] 2xl:w-[1408px] 3xl:w-[1536px] mx-auto">
+<footer class="footer py-8 2xl:py-12 font-sans w-[984px] xl:w-[1160px] 2xl:w-[1408px] 3xl:w-[1536px] mx-auto">
     <section class="footer-menu flex items-center justify-between mb-8 px-4">
         <div class="flex items-center gap-3">
             <div class="icon icon-logo size-11 text-blue-600"></div>
             <span class="text-blue-900 font-glina text-32 tracking-[-0.64px]">Продакшн</span>
         </div>
 
-        <nav class="footer-menu__nav flex items-start gap-3 2xl:gap-6">
+        <nav class="footer-menu__nav flex items-start gap-1 xl:gap-3 2xl:gap-6">
             <a href="#" class="footer-menu__link">Услуги</a>
             <a href="#" class="footer-menu__link">Работы</a>
             <a href="#" class="footer-menu__link">Отзывы</a>
@@ -591,12 +591,12 @@
         </nav>
 
         <div class="flex gap-3.5">
-            <a href="#" class="flex items-center justify-center size-11 rounded-xl ring-[1.5px] ring-slate-150 text-blue-900"><i class="icon icon-telegram size-6"></i></a>
-            <a href="#" class="flex items-center justify-center size-11 rounded-xl ring-[1.5px] ring-slate-150 text-blue-900"><i class="icon icon-vk size-6"></i></a>
+            <a href="#" class="flex items-center justify-center size-9 xl:size-11 rounded-xl ring-[1.5px] ring-slate-150 text-blue-900"><i class="icon icon-telegram size-5 xl:size-6"></i></a>
+            <a href="#" class="flex items-center justify-center size-9 xl:size-11 rounded-xl ring-[1.5px] ring-slate-150 text-blue-900"><i class="icon icon-vk size-5 xl:size-6"></i></a>
         </div>
     </section>
 
-    <section class="footer-info grid grid-cols-[auto_1fr_auto] gap-5 2xl:gap-6 pr-2 min-h-[240px] 2xl:min-h-[280px]">
+    <section class="footer-info grid grid-cols-[auto_1fr] xl:grid-cols-[auto_1fr_auto] gap-y-9 gap-5 2xl:gap-6 pr-2 min-h-[240px] 2xl:min-h-[280px]">
         <!-- footer services -->
         <div class="footer-services flex flex-col items-start">
             <a href="#" class="group flex items-center flex-nowrap gap-3 p-3 2xl:p-4 !no-underline rounded-xl transition-colors hover:bg-slate-40">
@@ -642,9 +642,9 @@
             </a>
         </div>
 
-        <div class="flex flex-nowrap gap-6">
+        <div class="flex flex-nowrap gap-5 2xl:gap-6">
             <!-- footer case container -->
-            <div class="footer-case-container relative rounded-3xl overflow-hidden basis-338 2xl:basis-[61.5%]">
+            <div class="footer-case-container relative rounded-3xl overflow-hidden basis-381 xl:basis-338 2xl:basis-[61.5%]">
                 <!-- Начальный кейс -->
                 <a href="#"
                    data-active="true"
@@ -671,7 +671,7 @@
             </div>
 
             <!-- footer review container -->
-            <div class="footer-review-container relative rounded-2xl inset-ring-[1.5px] inset-ring-slate-40 basis-293 2xl:basis-[38.5%] 3xl:basis-[416px]">
+            <div class="footer-review-container relative rounded-2xl inset-ring-[1.5px] inset-ring-slate-40 basis-281 xl:basis-293 2xl:basis-[38.5%] 3xl:basis-[416px]">
                 <!-- Начальный отзыв -->
                 <a href="#"
                    data-active="true"
@@ -704,10 +704,10 @@
         </div>
 
         <!-- verticals -->
-        <div class="flex flex-col justify-between rounded-2xl inset-ring-[1.5px] inset-ring-slate-40 p-3 w-[173px] 2xl:w-[209px] 3xl:w-[240px]">
-            <div class="p-2 pb-0 text-slate-430 font-serif font-medium 2xl:font-bold text-sm 2xl:text-[15px] 2xl:leading-[25px]">А ещё мы делаем</div>
+        <div class="flex flex-row xl:flex-col max-xl:items-center justify-between rounded-2xl inset-ring-[1.5px] inset-ring-slate-40 p-5 xl:p-3 w-auto xl:w-[173px] 2xl:w-[209px] 3xl:w-[240px] col-span-2 xl:col-span-1">
+            <div class="xl:p-2 pb-0 text-slate-430 font-serif font-bold xl:font-medium 2xl:font-bold text-[15px] xl:text-sm 2xl:text-[15px] 2xl:leading-[25px]">А ещё мы делаем</div>
 
-            <div class="flex flex-col items-start gap-1 font-glina text-xl 2xl:text-2xl leading-[57%] tracking-[-0.48px]">
+            <div class="flex flex-row xl:flex-col items-start gap-4 xl:gap-1 font-glina text-2xl xl:text-xl 2xl:text-2xl leading-[57%] tracking-[-0.48px]">
                 <a href="#" class="group inline-flex items-center gap-1.5 p-2 rounded-xl !no-underline transition-colors text-blue-900 hover:text-rose-500 hover:bg-slate-40">
                     <i class="icon icon-logo size-7 transition-colors"></i>
                     <span class="text-blue-900">Журнал</span>
@@ -728,7 +728,7 @@
         </div>
     </section>
 </footer>
-<section class="footer-features flex flex-nowrap justify-between">
+<section class="footer-features flex flex-nowrap justify-between relative">
     <div class="group relative footer-features__item footer-features__item_first">
         <span class="footer-features__label">дизайн</span>
 
@@ -805,13 +805,13 @@
         </div>
     </div>
 </section>
-<div class="mx-auto mb-3 w-[1136px] 2xl:w-[1375px] 3xl:w-[1536px]">
+<div class="mx-auto mb-3 w-[984px] xl:w-[1136px] 2xl:w-[1375px] 3xl:w-[1536px]">
     <div class="footer__word-logo"></div>
 
-    <div class="flex flex-nowrap items-center justify-between  text-gray-400 font-sans text-base font-medium  h-8 -mt-8 relative">
+    <div class="flex flex-nowrap items-center justify-between  text-gray-400 font-sans text-xs xl:text-base font-medium  h-5 xl:h-8 -mt-8 relative">
         <div class="flex items-center flex-nowrap gap-4">
             <span>© TOLKUNOV 2010-2025</span>
-            <div class="w-[2px] h-8 bg-slate-100"></div>
+            <div class="w-[2px] h-5 xl:h-8 bg-slate-100"></div>
             <a href="https://tolkunov.com/documents" class="text-gray-400 no-underline hover:text-gray-400">Документы</a>
         </div>
 
