--- a/src/css/contact-switcher.css
+++ b/src/css/contact-switcher.css
@@ -4,32 +4,49 @@
 
 .contact-switcher__item {
     @apply flex flex-nowrap items-center transition-[gap] gap-0 data-[active=true]:gap-4;
-    @apply h-[74px] 2xl:h-24;
+    @apply rounded-3xl;
+    @apply h-auto xl:h-[74px] 2xl:h-24;
+
+    @apply max-xl:p-3;
+
+    &[data-active="true"] {
+        @apply bg-white;
+    }
+
+    &[data-active="false"] {
+        @apply max-xl:border max-xl:border-white/20 max-xl:bg-white/20 max-xl:backdrop-blur-[13px];
+    }
 }
 
 .contact-switch {
     @apply relative cursor-pointer group-[[data-active=true]]:cursor-default;
-    @apply size-[74px] 2xl:size-24;
+    @apply size-[64px] xl:size-[74px] 2xl:size-24;
 }
 
 .contact-switcher__info {
     @apply overflow-hidden transition-all w-0 opacity-0 group-[[data-active=true]]:w-[170px] group-[[data-active=true]]:opacity-100;
+    @apply flex flex-col gap-1 2xl:gap-2;
 }
 
 .contact-switcher__line1 {
     @apply text-blue-900 font-bold text-nowrap;
-    @apply text-base/6 2xl:text-lg/6
+    @apply leading-6;
+    @apply text-sm xl:text-base 2xl:text-lg;
 }
 
 .contact-switcher__line2 {
-    @apply text-slate-430 hover:text-slate-430 text-sm font-medium text-nowrap;
+    @apply text-slate-430 hover:text-slate-430 font-medium text-nowrap;
+    @apply text-xs xl:text-sm;
+    @apply leading-4;
+    @apply tracking-[0.14px];
 }
 
 .contact-switch__img {
     @apply absolute left-0;
     @apply bottom-0 2xl:bottom-1;
-    @apply xl:w-[74px] 2xl:w-24;
-    @apply xl:h-[90px] 2xl:h-[110px];
+    @apply w-[64px] h-[68px];
+    @apply xl:w-[74px] 2xl:w-[96px];
+    @apply xl:h-[82px] 2xl:h-[110px];
 
     background-repeat: no-repeat;
     background-size: contain;
@@ -38,15 +55,15 @@
 
 /* Дефолтная (мобильная, <768px) */
 .contact-switch__img_dima {
-    background-image: url("../img/contact-switcher/dima_default.png");
+    background-image: url("../img/contact-switcher/dima_440.png");
 }
 
 .contact-switch__img_tanya {
-    background-image: url("../img/contact-switcher/tanya_default.png");
+    background-image: url("../img/contact-switcher/tanya_440.png");
 }
 
 .contact-switch__img_olya {
-    background-image: url("../img/contact-switcher/olya_default.png");
+    background-image: url("../img/contact-switcher/olya_440.png");
 }
 
 /* ≥768px */
@@ -95,34 +112,45 @@
 }
 
 .contact-switch__ring_dima {
-    @apply absolute inset-0 transition-all ring-2 ring-[#D6DEFA] group-hover:ring-blue-600 group-[[data-active=true]]:ring-blue-600;
+    @apply absolute inset-0 transition-all;
+
+    @apply ring-1 ring-white/50;
+    @apply xl:ring-2 xl:ring-[#D6DEFA];
+    @apply group-hover:ring-blue-600 group-[[data-active=true]]:ring-blue-600;
     @apply rounded-2xl 2xl:rounded-28;
 }
 
 .contact-switch__ring_tanya {
     @apply absolute left-1/2 -translate-x-1/2 rotate-45 transition-all;
-    @apply rounded-2xl size-[66px] bottom-[5px];
+    @apply rounded-[19.478px] size-[56px] bottom-[4px];
+    @apply xl:rounded-2xl xl:size-[66px] xl:bottom-[4px];
     @apply 2xl:rounded-28 2xl:size-[86.974px] 2xl:bottom-[7px];
-    @apply ring-2 ring-[#EDD2F6] group-hover:ring-purple-400 group-[[data-active=true]]:ring-purple-400;
+    @apply ring-1 ring-white/50;
+    @apply xl:ring-2 xl:ring-[#EDD2F6];
+    @apply group-hover:ring-purple-400 group-[[data-active=true]]:ring-purple-400;
 }
 
 .contact-switch__ring_olya {
     @apply absolute transition-all rounded-full;
-    @apply inset-0.5 2xl:inset-0;
-    @apply ring-2 ring-[#DCEFA8] group-hover:ring-lime-500 group-[[data-active=true]]:ring-lime-500;
+    @apply inset-0;
+
+    @apply ring-1 ring-white/50;
+    @apply xl:ring-2 xl:ring-[#DCEFA8];
+    @apply group-hover:ring-lime-500 group-[[data-active=true]]:ring-lime-500;
 }
 
 .contact-switch__label {
     @apply transition-colors absolute left-1/2 -translate-x-1/2;
 
-    @apply -bottom-1.5 2xl:-bottom-2.5;
+    @apply -bottom-1 xl:-bottom-1.5 2xl:-bottom-2.5;
     @apply px-1 py-1.5 2xl:px-2 2xl:py-2.5;
     @apply rounded-md 2xl:rounded-xl;
 
     @apply shadow-contact-switcher-label;
     @apply font-bold text-nowrap;
 
-    @apply text-[8px] leading-[6px] tracking-[0.08px];
+    @apply text-[10px] leading-[7px] tracking-[0.1px];
+    @apply xl:text-[8px] xl:leading-[6px] xl:tracking-[0.08px];
     @apply 2xl:text-xs 2xl:leading-[9px] 2xl:tracking-[0.12px];
 
     @apply bg-white text-blue-900;
@@ -141,6 +169,7 @@
 }
 
 .contact-switch__connector {
+    @apply max-xl:hidden;
     @apply absolute left-1/2 -translate-x-1/2;
     @apply -bottom-5 2xl:-bottom-9;
     @apply w-[38px] h-2;
