--- a/src/css/footer-features.css
+++ b/src/css/footer-features.css
@@ -1,6 +1,8 @@
 .footer-features {
     @apply w-[1136px] 2xl:w-[1375px] 3xl:w-[1536px];
-    @apply mb-9 2xl:mb-10;
+    @apply mb-7 xl:mb-9 2xl:mb-10;
+
+    @apply max-xl:scale-[calc(984/1136)] z-100;
 
     @apply mx-auto;
 }
