--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,5 +1,9 @@
 .footer-menu__link {
-    @apply text-blue-900 text-[17px]/3.5 font-medium p-3 pr-2.5;
+    @apply text-blue-900 font-medium;
+    @apply text-sm xl:text-[17px]/3.5;
+
+    @apply py-3 px-2;
+    @apply xl:p-3 xl:pr-2.5;
     @apply rounded-10 transition-colors;
 
     &:hover, &:active, &:focus {
@@ -47,7 +51,7 @@
 }
 
 .footer-services__tag {
-    @apply text-tiny font-black leading-3 tracking-[0.4px] uppercase;
+    @apply text-[9px] xl:text-tiny font-black leading-3 tracking-[0.4px] uppercase;
     @apply px-0 py-[7px];
     @apply relative;
 
